--- a/sass/layouts/_loader.scss
+++ b/sass/layouts/_loader.scss
@@ -10,7 +10,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    z-index: 2;
+    z-index: -1;
     opacity: 0;
     animation: loader-background 3000ms ease-out;
 }
@@ -18,12 +18,14 @@
 @keyframes loader-background{
     0%{
         opacity: 0.98;
+        z-index: 2;
     }
     70%{
         opacity: 0.98;
     }
     100%{
         opacity: 0;
+        z-index: 2;
     }
 }
 
@@ -184,7 +186,7 @@
 .egg--two{
     position: absolute;
     margin-top: 6px;
-    animation: egg-spinner 2700ms;
+    animation: egg-spinner 2700ms forwards;
 }
 
 @keyframes egg-spinner{
@@ -192,7 +194,7 @@
         transform: rotate(0deg);
     }
     100%{
-        transform: rotate(3turn);
+        transform: rotate(2.5turn);
     }
 }
 
